# loop

./: .env  .eslintrc.json  .gitignore  .prettierrc.json  README.md  aow.py  codm.py  dep.js  deploy-commands.js  index.js  main.py  package-lock.json  package.json  prefix.json  pyproject.toml  unpoghelp.py
.github/workflows/: codeql-analysis.yml  codeql.yml
.ignore/: purge.js
cogs/: cmderror.py  developer.py  events.py  fun.py  games.py  moderation.py  statcord.py  utlity.py
commands/: ping.js  server.js  shards.js  user.js
events/: debug.js  error.js  interactionCreate.js  ready.js  warn.js
