[tool.poetry]
name = "loop"
version = "0.3.0"
description = "loop of hernie"
authors = ["hernie"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
"statcord.py" = "^3.1.0"
utils = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
